# GeometricTools

GTE/: CMakeLists.txt
GTE/Mathematics/: CMakeLists.txt
GTE/Mathematics/cmake/: gtmathematicsConfig.cmake.in
